# yt-audio-cli

./: .markdownlint.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  changelogithub.config.json  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml  publish.yml
src/yt_audio_cli/: __init__.py  __main__.py  cli.py  converter.py  downloader.py  errors.py  filename.py  progress.py
src/yt_audio_cli/batch/: __init__.py  executor.py  job.py  request.py  retry.py
src/yt_audio_cli/convert/: __init__.py  transcoder.py
src/yt_audio_cli/core/: __init__.py  errors.py  filename.py
src/yt_audio_cli/download/: __init__.py  batch.py  downloader.py
src/yt_audio_cli/ui/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_converter.py  test_downloader.py  test_errors.py  test_filename.py  test_progress.py
tests/batch/: __init__.py  test_executor.py  test_job.py  test_request.py  test_retry.py
tests/convert/: test_transcoder.py
tests/core/: test_errors.py  test_filename.py
tests/download/: test_batch.py  test_downloader.py
tests/ui/: test_progress.py
